Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Separa_Bien__c.field-meta.xml
<CustomField>
    <fullName>CI_Separa_Bien__c</fullName>
    <label>Separación de Bien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>No Aplica</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Capitulación Matrimonial</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Disolución de Sociedad Conyugal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>