Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Servicios_Basicos__c.field-meta.xml
<CustomField>
    <fullName>CI_Servicios_Basicos__c</fullName>
    <label>Tarjetas de credito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>