Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_SLA_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA_Cuenta__c</fullName>
    <description>Días transcurridos desde que se creó la Cuenta.</description>
    <formula>IF(
    ISBLANK(CI_Reassignment_date_time__c),
    NOW()-CreatedDate,
    NOW()-CI_Reassignment_date_time__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Días transcurridos desde que se creó la Cuenta.</inlineHelpText>
    <label>SLA Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>