Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_SLA_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA_Prospecto__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que indica cuantos días tiene el Prospecto desde su creación hasta que se convirtió en Cuenta.</description>
    <inlineHelpText>Campo que indica cuantos días tiene el Prospecto desde su creación hasta que se convirtió en Cuenta.</inlineHelpText>
    <label>SLA Prospecto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>