Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_SLA_Total__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA_Total__c</fullName>
    <description>Total en días desde que se creó el registro (Prospecto-Cuenta).</description>
    <formula>IF(
    ISBLANK(CI_Reassignment_date_time__c),
    CI_SLA_Prospecto__c + CI_SLA_Cuenta__c,
    CI_SLA_Cuenta__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total en días desde que se creó el registro (Prospecto-Cuenta).</inlineHelpText>
    <label>SLA Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>