Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Sueldo_Men_Sol__c.field-meta.xml
<CustomField>
    <fullName>CI_Sueldo_Men_Sol__c</fullName>
    <label>Sueldo Mensual del Solicitante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>