Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tel_ext1__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_ext1__c</fullName>
    <label>Teléfono en el exterior</label>
    <type>Phone</type>
</CustomField>