Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tel_extC__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_extC__c</fullName>
    <label>Teléfono en el exterior Cónyuge</label>
    <type>Phone</type>
</CustomField>