Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tel_Trab_Ant__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_Trab_Ant__c</fullName>
    <label>Teléfono Trabajo Anterior</label>
    <type>Phone</type>
</CustomField>