Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tel_Trab_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Tel_Trab_C__c</fullName>
    <label>Teléfono Trabajo Cónyuge</label>
    <type>Phone</type>
</CustomField>