Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Cuenta__c</fullName>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuenta de ahorros</fullName>
            </value>
            <value>
                <fullName>Cuenta corriente</fullName>
            </value>
            <value>
                <fullName>Cuenta de nómina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>