Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Tipo_Trabajo_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Trabajo_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo Trabajo Cónyuge</label>
    <referenceTo>Tipo_de_Trabajo__c</referenceTo>
    <relationshipLabel>Cuentas (Tipo Trabajo Cónyuge)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>