Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_TOTAL_EGR_MEN__c.field-meta.xml
<CustomField>
    <fullName>CI_TOTAL_EGR_MEN__c</fullName>
    <formula>CI_Descuento_IESS__c + CI_Arriendo__c + CI_Servicios_Basicos__c + CI_Alimentacion__c + Educacion__c + CI_Otros_Gastos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL EGRESOS MENSUALES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>