Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_TOTAL_ING_MEN__c.field-meta.xml
<CustomField>
    <fullName>CI_TOTAL_ING_MEN__c</fullName>
    <formula>CI_Sueldo_Men_Sol__c + CI_Otros_Ing_Sol__c + CI_Ing_Con__c +  CI_Otros_Ing_Con__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL INGRESOS MENSUALES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>