Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Zona__c.field-meta.xml
<CustomField>
    <fullName>CI_Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CE</fullName>
                <label>CENTRO</label>
            </value>
            <value>
                <fullName>NOR</fullName>
                <label>NORTE</label>
            </value>
            <value>
                <fullName>SB</fullName>
                <label>SAMBORONDON</label>
            </value>
            <value>
                <fullName>SR</fullName>
                <label>SUR</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>VÍA A LA COSTA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>