Inmob-Salesforce/force-app/main/default/objects/Account/fields/Educacion__c.field-meta.xml
<CustomField>
    <fullName>Educacion__c</fullName>
    <label>Educación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>