Inmob-Salesforce/force-app/main/default/objects/Account/fields/Email_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Email_Empresa__c</fullName>
    <label>Email Empresa</label>
    <type>Email</type>
</CustomField>