Inmob-Salesforce/force-app/main/default/objects/Account/fields/Empresa_Actual__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Actual__c</fullName>
    <label>Empresa Actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>