Inmob-Salesforce/force-app/main/default/objects/Account/fields/Telefono_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Empresa__c</fullName>
    <label>Teléfono Empresa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>