Inmob-Salesforce/force-app/main/default/objects/Account/fields/Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo__c</fullName>
    <label>Tiempo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>