Inmob-Salesforce/force-app/main/default/objects/Account/fields/Tipo_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Trabajo__c</fullName>
    <label>Tipo Trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>