Inmob-Salesforce/force-app/main/default/objects/Account/recordTypes/Cuenta_Empresarial.recordType-meta.xml
<RecordType>
    <fullName>Cuenta_Empresarial</fullName>
    <active>true</active>
    <label>Cuenta Empresarial</label>
</RecordType>