Inmob-Salesforce/force-app/main/default/objects/Account/validationRules/Validar_Campo_Identificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Identificacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISBLANK( CI_Identificacion__c )

)</errorConditionFormula>
    <errorDisplayField>CI_Identificacion__pc</errorDisplayField>
    <errorMessage>Debe Ingresar Identificación</errorMessage>
</ValidationRule>