Inmob-Salesforce/force-app/main/default/objects/Account/validationRules/Validar_Campos_Conyuge.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campos_Conyuge</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR( 
TEXT( CI_Estado_Civil__c ) = &quot;C&quot;,
TEXT( CI_Estado_Civil__c ) = &quot;U&quot;
),
OR (
ISBLANK( TEXT ( CI_Tipo_Ident_C__c ) ),
ISBLANK( CI_Identificacion_C__c ),
ISBLANK( CI_Nombre_C__c ),
ISBLANK( CI_Apellidos_C__c )
)
)</errorConditionFormula>
    <errorMessage>Los datos del cónyuge son requeridos.</errorMessage>
</ValidationRule>