Inmob-Salesforce/force-app/main/default/objects/Account/validationRules/Validar_Campos_PEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campos_PEP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CI_PEP__c = true,
OR (
ISBLANK( CI_Institucion__c ),
ISBLANK( CI_Cargo_PEP__c),
ISBLANK( CI_Fecha_Fin__c ),
ISBLANK( CI_Parentesco__c )
)
)</errorConditionFormula>
    <errorMessage>Los datos de PEP son requeridos.</errorMessage>
</ValidationRule>