Inmob-Salesforce/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CI_Proyecto__c</columns>
    <columns>CI_Dias_sin_gestionar__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CI_Fecha_ultima_gestion__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CI_Estado_cuenta__c</columns>
    <columns>CI_Origen__c</columns>
    <columns>CCI_TotalOpportunities__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>Todas las Cuentas</label>
</ListView>