Inmob-Salesforce/force-app/main/default/objects/Account/listViews/Cuentas_dadas_de_baja.listView-meta.xml
<ListView>
    <fullName>Cuentas_dadas_de_baja</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CI_Proyecto__c</columns>
    <columns>CI_Dias_sin_gestionar__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CI_Estado_cuenta__c</field>
        <operation>equals</operation>
        <value>Dado de Baja</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>CI_Proyecto__c</field>
        <operation>equals</operation>
        <value>VILLA ITALIA</value>
    </filters>
    <label>Cuentas dadas de baja</label>
    <sharedTo>
        <role>Jefe_Ventas_Rioja</role>
        <role>Jefe_Ventas_Vittoria</role>
    </sharedTo>
</ListView>