Inmob-Salesforce/force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CI_Dias_sin_gestionar__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CI_Convertido_desde_Lead__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Cuentas</label>
</ListView>